--- a/数据结构.md
+++ b/数据结构.md
@@ -1,43 +1,56 @@
+## AdaptiveDynamicStreamingInfoItemForDY
+
+转自适应码流信息
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Definition | Integer | 转自适应码流规格。<br/>示例值：20 |
+| Package | String | 打包格式，可能为 HLS和 MPEG-DASH 两种。<br/>示例值：HLS |
+| Path | String | 播放路径。<br/>示例值：xxx |
+| Storage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 自适应码流文件的存储位置。 |
+
 ## AdaptiveDynamicStreamingTaskInputForDY
 
 对视频转自适应码流的输入参数类型
 
-被如下接口引用：ProcessMediaForDY。
+被如下接口引用：DescribeTaskDetailForDY, ProcessMediaForDY。
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| Definition | Integer | 是 | 转自适应码流模板 ID。 |
+| Definition | Integer | 是 | 转自适应码流模板 ID。<br/>示例值：20 |
 | WatermarkSet | Array of [WatermarkInputForDY](#WatermarkInputForDY) | 否 | 水印列表，支持多张图片或文字水印，最大可支持 10 张。 |
 | OutputStorage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 否 | 转自适应码流后文件的目标存储，不填则继承上层的 OutputStorage 值。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
-| OutputObjectPath | String | 否 | 转自适应码流后，manifest 文件的输出路径，可以为相对路径或者绝对路径。如果不填，则默认为相对路径：`{inputName}_adaptiveDynamicStreaming_{definition}.{format}`。 |
-| SubStreamObjectName | String | 否 | 转自适应码流后，子流文件的输出路径，只能为相对路径。如果不填，则默认为相对路径：`{inputName}_adaptiveDynamicStreaming_{definition}_{subStreamNumber}.{format}`。 |
-| SegmentObjectName | String | 否 | 转自适应码流（仅 HLS）后，分片文件的输出路径，只能为相对路径。如果不填，则默认为相对路径：`{inputName}_adaptiveDynamicStreaming_{definition}_{subStreamNumber}_{segmentNumber}.{format}`。 |
+| OutputObjectPath | String | 否 | 转自适应码流后，manifest 文件的输出路径，可以为相对路径或者绝对路径。如果不填，则默认为相对路径：`{inputName}_adaptiveDynamicStreaming_{definition}.{format}`。<br/>示例值：{xxx}_adaptiveDynamicStreaming_{xxx}.{xxx} |
+| SubStreamObjectName | String | 否 | 转自适应码流后，子流文件的输出路径，只能为相对路径。如果不填，则默认为相对路径：`{inputName}_adaptiveDynamicStreaming_{definition}_{subStreamNumber}.{format}`。<br/>示例值：{xxx}_adaptiveDynamicStreaming_{xxx}_{xxx}.{xxx} |
+| SegmentObjectName | String | 否 | 转自适应码流（仅 HLS）后，分片文件的输出路径，只能为相对路径。如果不填，则默认为相对路径：`{inputName}_adaptiveDynamicStreaming_{definition}_{subStreamNumber}_{segmentNumber}.{format}`。<br/>示例值：{xxx}_adaptiveDynamicStreaming_{xxx}_{xxx}_{xxx}.{xxx} |
 
 ## AnimatedGraphicTaskInputForDY
 
 转动图任务类型。
 
-被如下接口引用：ProcessMediaForDY。
+被如下接口引用：DescribeTaskDetailForDY, ProcessMediaForDY。
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| Definition | Integer | 是 | 视频转动图模板 ID。 |
-| StartTimeOffset | Float | 是 | 动图在视频中的开始时间，单位为秒。 |
-| EndTimeOffset | Float | 是 | 动图在视频中的结束时间，单位为秒。 |
+| Definition | Integer | 是 | 视频转动图模板 ID。<br/>示例值：20 |
+| StartTimeOffset | Float | 是 | 动图在视频中的开始时间，单位为秒。<br/>示例值：12 |
+| EndTimeOffset | Float | 是 | 动图在视频中的结束时间，单位为秒。<br/>示例值：12 |
 | OutputStorage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 否 | 转动图后文件的目标存储，不填则继承上层的 OutputStorage 值。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
-| OutputObjectPath | String | 否 | 转动图后文件的输出路径，可以为相对路径或者绝对路径。如果不填，则默认为相对路径：`{inputName}_animatedGraphic_{definition}.{format}`。 |
+| OutputObjectPath | String | 否 | 转动图后文件的输出路径，可以为相对路径或者绝对路径。如果不填，则默认为相对路径：`{inputName}_animatedGraphic_{definition}.{format}`。<br/>示例值：{xxx}_animatedGraphic_{xxx}.{xxx} |
 
 ## CosInputInfoForDY
 
 视频处理 COS 对象信息。
 
-被如下接口引用：EditMediaForDY, ProcessMediaForDY。
+被如下接口引用：DescribeMediaMetaDataForDY, ProcessMediaForDY。
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| Bucket | String | 是 | 视频处理对象文件所在的 COS Bucket 名，如 TopRankVideo-125xxx88。 |
-| Region | String | 是 | 视频处理对象文件所在的 COS Bucket 所属园区，如 ap-chongqing。 |
-| Object | String | 是 | 视频处理对象文件的输入路径，如`/movie/201907/WildAnimal.mov`。 |
+| Bucket | String | 是 | 视频处理对象文件所在的 COS Bucket 名，如 TopRankVideo-125xxx88。<br/>示例值：TopRankVideo-125xxx88 |
+| Region | String | 是 | 视频处理对象文件所在的 COS Bucket 所属园区，如 ap-chongqing。<br/>示例值：ap-chongqing |
+| Object | String | 是 | 视频处理对象文件的输入路径，如`/movie/201907/WildAnimal.mov`。<br/>示例值：/movie/201907/WildAnimal.mov |
 
 ## CosOutputStorageForDY
 
@@ -47,20 +60,20 @@
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| Bucket | String | 否 | 视频处理生成的文件输出的目标 Bucket 名，如 TopRankVideo-125xxx88。如果不填，表示继承上层。 |
-| Region | String | 否 | 视频处理生成的文件输出的目标 Bucket 的园区，如 ap-chongqing。如果不填，表示继承上层。 |
+| Bucket | String | 否 | 视频处理生成的文件输出的目标 Bucket 名，如 TopRankVideo-125xxx88。如果不填，表示继承上层。<br/>示例值：TopRankVideo-125xxx8 |
+| Region | String | 否 | 视频处理生成的文件输出的目标 Bucket 的园区，如 ap-chongqing。如果不填，表示继承上层。<br/>示例值：ap-chongqing |
 
 ## EditMediaFileInfoForDY
 
 编辑点播视频文件信息
 
-被如下接口引用：EditMediaForDY。
+被如下接口引用：DescribeTaskDetailForDY, EditMediaForDY。
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
 | InputInfo | [MediaInputInfoForDY](#MediaInputInfoForDY) | 是 | 视频的输入信息。 |
-| StartTimeOffset | Float | 否 | 视频剪辑的起始时间偏移，单位：秒。 |
-| EndTimeOffset | Float | 否 | 视频剪辑的结束时间偏移，单位：秒。 |
+| StartTimeOffset | Float | 否 | 视频剪辑的起始时间偏移，单位：秒。<br/>示例值：1 |
+| EndTimeOffset | Float | 否 | 视频剪辑的结束时间偏移，单位：秒。<br/>示例值：1 |
 
 ## EditMediaOutputConfigForDY
 
@@ -70,32 +83,182 @@
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| Container | String | 否 | 封装格式，可选值：mp4、hls、mov、flv、avi。默认是 mp4。 |
+| Container | String | 否 | 封装格式，可选值：mp4、hls、mov、flv、avi。默认是 mp4。<br/>示例值：mp4 |
+
+## EditMediaTaskForDY
+
+编辑视频任务信息
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| TaskId | String | 任务 ID。<br/>示例值：123 |
+| Status | String | 任务状态，取值：<br/><li>PROCESSING：处理中；</li><li>FINISH：已完成。</li><br/>示例值：PROCESSING |
+| ErrCode | Integer | 错误码<br/><li>0：成功；</li><li>其他值：失败。</li><br/>示例值：0 |
+| Message | String | 错误信息。<br/>示例值：text |
+| Input | [EditMediaTaskInputForDY](#EditMediaTaskInputForDY) | 视频编辑任务的输入。 |
+| Output | [EditMediaTaskOutputForDY](#EditMediaTaskOutputForDY) | 视频编辑任务的输出。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+
+## EditMediaTaskInputForDY
+
+编辑视频任务的输入。
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| FileInfoSet | Array of [EditMediaFileInfoForDY](#EditMediaFileInfoForDY) | 输入的视频文件信息。 |
+
+## EditMediaTaskOutputForDY
+
+编辑视频任务的输出
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| OutputStorage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 编辑后文件的目标存储。 |
+| Path | String | 编辑后的视频文件路径。<br/>示例值：/Path |
+| ProcedureTaskId | String | 云点播对编辑后的视频文件发起 ProcessMediaForDY 任务的任务 ID。<br/>示例值：2600123-WorkflowTask-72407e40868f7873c2fbc16ca8b28edt2 |
 
 ## ImageSpriteTaskInputForDY
 
 对视频截雪碧图任务输入参数类型
 
-被如下接口引用：ProcessMediaForDY。
+被如下接口引用：DescribeTaskDetailForDY, ProcessMediaForDY。
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| Definition | Integer | 是 | 雪碧图模板 ID。 |
+| Definition | Integer | 是 | 雪碧图模板 ID。<br/>示例值：20 |
 | OutputStorage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 否 | 截取雪碧图后文件的目标存储，不填则继承上层的 OutputStorage 值。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
-| OutputObjectPath | String | 否 | 截取雪碧图后，雪碧图图片文件的输出路径，可以为相对路径或者绝对路径。如果不填，则默认为相对路径：`{inputName}_imageSprite_{definition}_{number}.{format}`。 |
-| WebVttObjectName | String | 否 | 截取雪碧图后，Web VTT 文件的输出路径，只能为相对路径。如果不填，则默认为相对路径：`{inputName}_imageSprite_{definition}.{format}`。 |
+| OutputObjectPath | String | 否 | 截取雪碧图后，雪碧图图片文件的输出路径，可以为相对路径或者绝对路径。如果不填，则默认为相对路径：`{inputName}_imageSprite_{definition}_{number}.{format}`。<br/>示例值：{xxx}_imageSprite_{xxx}_{xxx}.{xxx} |
+| WebVttObjectName | String | 否 | 截取雪碧图后，Web VTT 文件的输出路径，只能为相对路径。如果不填，则默认为相对路径：`{inputName}_imageSprite_{definition}.{format}`。<br/>示例值：{xxx}_imageSprite_{xxx}.{xxx} |
 | ObjectNumberFormat | [NumberFormatForDY](#NumberFormatForDY) | 否 | 截取雪碧图后输出路径中的`{number}`变量的规则。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+
+## MediaAnimatedGraphicsItemForDY
+
+视频转动图结果信息
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Storage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 转动图文件的存储位置。 |
+| Path | String | 转动图的文件路径。<br/>示例值：/123/xxx |
+| Definition | Integer | 转动图模板 ID，参见[转动图参数模板](https://cloud.tencent.com/document/product/266/33481#.5B.5D(id.3Azdt).E8.BD.AC.E5.8A.A8.E5.9B.BE.E6.A8.A1.E6.9D.BF)。<br/>示例值：20 |
+| Container | String | 动图格式，如 gif。<br/>示例值：gif |
+| Height | Integer | 动图的高度，单位：px。<br/>示例值：1 |
+| Width | Integer | 动图的宽度，单位：px。<br/>示例值：1 |
+| Bitrate | Integer | 动图码率，单位：bps。<br/>示例值：1 |
+| Size | Integer | 动图大小，单位：字节。<br/>示例值：1 |
+| Md5 | String | 动图的md5值。<br/>示例值：sfsdxxx |
+| StartTimeOffset | Float | 动图在视频中的起始时间偏移，单位：秒。<br/>示例值：1 |
+| EndTimeOffset | Float | 动图在视频中的结束时间偏移，单位：秒。<br/>示例值：1 |
+
+## MediaAudioStreamItemForDY
+
+音频流信息
+
+被如下接口引用：DescribeMediaMetaDataForDY, DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Bitrate | Integer | 音频流的码率，单位：bps。<br/>示例值：8000 |
+| SamplingRate | Integer | 音频流的采样率，单位：hz。<br/>示例值：8000 |
+| Codec | String | 音频流的编码格式，例如 aac。<br/>示例值：aac |
+
+## MediaImageSpriteItemForDY
+
+雪碧图信息
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Definition | Integer | 雪碧图规格，参见[雪碧图参数模板](https://cloud.tencent.com/document/product/266/33480#.E9.9B.AA.E7.A2.A7.E5.9B.BE.E6.A8.A1.E6.9D.BF)。<br/>示例值：10 |
+| Height | Integer | 雪碧图小图的高度。<br/>示例值：100 |
+| Width | Integer | 雪碧图小图的宽度。<br/>示例值：100 |
+| TotalCount | Integer | 每一张雪碧图大图里小图的数量。<br/>示例值：10 |
+| ImagePathSet | Array of String | 每一张雪碧图大图的路径。<br/>示例值：["/xxx/xxx.jpg"] |
+| WebVttPath | String | 雪碧图子图位置与时间关系的 WebVtt 文件路径。WebVtt 文件表明了各个雪碧图小图对应的时间点，以及在雪碧大图里的坐标位置，一般被播放器用于实现预览。<br/>示例值："/xxx/xxx.vtt" |
+| Storage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 雪碧图文件的存储位置。 |
 
 ## MediaInputInfoForDY
 
 视频处理的输入对象信息。
 
-被如下接口引用：EditMediaForDY, ProcessMediaForDY。
+被如下接口引用：DescribeMediaMetaDataForDY, DescribeTaskDetailForDY, EditMediaForDY, ProcessMediaForDY。
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| Type | String | 是 | 输入来源对象的类型，支持 COS 和 URL 两种。 |
+| Type | String | 是 | 输入来源对象的类型，支持 COS 和 URL 两种。<br/>示例值：COS |
 | CosInputInfo | [CosInputInfoForDY](#CosInputInfoForDY) | 否 | 当 Type 为 COS 时有效，则该项为必填，表示视频处理 COS 对象信息。 |
+
+## MediaMetaDataForDY
+
+媒体文件元信息
+
+被如下接口引用：DescribeMediaMetaDataForDY, DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Size | Integer | 上传的媒体文件大小（视频为 HLS 时，大小是 m3u8 和 ts 文件大小的总和），单位：字节。<br/>示例值：1024 |
+| Container | String | 容器类型，例如 m4a，mp4 等。<br/>示例值：mp4 |
+| Bitrate | Integer | 视频流码率平均值与音频流码率平均值之和，单位：bps。<br/>示例值：3000000 |
+| Height | Integer | 视频流高度的最大值，单位：px。<br/>示例值：1080 |
+| Width | Integer | 视频流宽度的最大值，单位：px。<br/>示例值：1920 |
+| Duration | Float | 视频时长，单位：秒。<br/>示例值：60 |
+| Rotate | Integer | 视频拍摄时的选择角度，单位：度。<br/>示例值：0 |
+| VideoStreamSet | Array of [MediaVideoStreamItemForDY](#MediaVideoStreamItemForDY) | 视频流信息。 |
+| AudioStreamSet | Array of [MediaAudioStreamItemForDY](#MediaAudioStreamItemForDY) | 音频流信息。 |
+| VideoDuration | Float | 视频时长，单位：秒。<br/>示例值：60.0 |
+| AudioDuration | Float | 音频时长，单位：秒。<br/>示例值：60.0 |
+
+## MediaProcessTaskAdaptiveDynamicStreamingResultForDY
+
+对视频转自适应码流任务结果类型
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Status | String | 任务状态，有 PROCESSING，SUCCESS 和 FAIL 三种。<br/>示例值：SUCCESS |
+| ErrCodeExt | String | 错误码，空字符串表示成功，其他值表示失败，取值请参考 [视频处理类错误码](https://cloud.tencent.com/document/product/266/50368) 列表。<br/>示例值："" |
+| ErrCode | Integer | 错误码，0 表示成功，其他值表示失败（该字段已不推荐使用，建议使用新的错误码字段 ErrCodeExt）。<br/>示例值：0 |
+| Message | String | 错误信息。<br/>示例值："" |
+| Input | [AdaptiveDynamicStreamingTaskInputForDY](#AdaptiveDynamicStreamingTaskInputForDY) | 对视频转自适应码流任务的输入。 |
+| Output | [AdaptiveDynamicStreamingInfoItemForDY](#AdaptiveDynamicStreamingInfoItemForDY) | 对视频转自适应码流任务的输出。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+
+## MediaProcessTaskAnimatedGraphicResultForDY
+
+转动图任务结果类型
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Status | String | 任务状态，有 PROCESSING，SUCCESS 和 FAIL 三种。<br/>示例值：SUCCESS |
+| ErrCodeExt | String | 错误码，空字符串表示成功，其他值表示失败，取值请参考 [视频处理类错误码](https://cloud.tencent.com/document/product/266/50368) 列表。<br/>示例值："" |
+| ErrCode | Integer | 错误码，0 表示成功，其他值表示失败（该字段已不推荐使用，建议使用新的错误码字段 ErrCodeExt）。<br/>示例值：0 |
+| Message | String | 错误信息。<br/>示例值："" |
+| Input | [AnimatedGraphicTaskInputForDY](#AnimatedGraphicTaskInputForDY) | 转动图任务的输入。 |
+| Output | [MediaAnimatedGraphicsItemForDY](#MediaAnimatedGraphicsItemForDY) | 转动图任务的输出。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+
+## MediaProcessTaskImageSpriteResultForDY
+
+对视频截雪碧图任务结果类型
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Status | String | 任务状态，有 PROCESSING，SUCCESS 和 FAIL 三种。<br/>示例值：SUCCESS |
+| ErrCodeExt | String | 错误码，空字符串表示成功，其他值表示失败，取值请参考 [视频处理类错误码](https://cloud.tencent.com/document/product/266/50368) 列表。<br/>示例值："" |
+| ErrCode | Integer | 错误码，0 表示成功，其他值表示失败（该字段已不推荐使用，建议使用新的错误码字段 ErrCodeExt）。<br/>示例值：0 |
+| Message | String | 错误信息。<br/>示例值："" |
+| Input | [ImageSpriteTaskInputForDY](#ImageSpriteTaskInputForDY) | 对视频截雪碧图任务的输入。 |
+| Output | [MediaImageSpriteItemForDY](#MediaImageSpriteItemForDY) | 对视频截雪碧图任务的输出。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
 
 ## MediaProcessTaskInputForDY
 
@@ -112,6 +275,141 @@
 | ImageSpriteTaskSet | Array of [ImageSpriteTaskInputForDY](#ImageSpriteTaskInputForDY) | 否 | 对视频截雪碧图任务列表。 |
 | AdaptiveDynamicStreamingTaskSet | Array of [AdaptiveDynamicStreamingTaskInputForDY](#AdaptiveDynamicStreamingTaskInputForDY) | 否 | 转自适应码流任务列表。 |
 
+## MediaProcessTaskResultForDY
+
+任务查询结果类型
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Type | String | 任务的类型，可以取的值有：<br/><li>Transcode：转码</li><li>AnimatedGraphics：转动图</li><li>SnapshotByTimeOffset：时间点截图</li><li>SampleSnapshot：采样截图</li><li>ImageSprites：雪碧图</li><li>CoverBySnapshot：截图做封面</li><li>AdaptiveDynamicStreaming：自适应码流</li><br/>示例值：Transcode |
+| TranscodeTask | [MediaProcessTaskTranscodeResultForDY](#MediaProcessTaskTranscodeResultForDY) | 视频转码任务的查询结果，当任务类型为 Transcode 时有效。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+| AnimatedGraphicTask | [MediaProcessTaskAnimatedGraphicResultForDY](#MediaProcessTaskAnimatedGraphicResultForDY) | 视频转动图任务的查询结果，当任务类型为 AnimatedGraphics 时有效。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+| SnapshotByTimeOffsetTask | [MediaProcessTaskSnapshotByTimeOffsetResultForDY](#MediaProcessTaskSnapshotByTimeOffsetResultForDY) | 对视频按时间点截图任务的查询结果，当任务类型为 SnapshotByTimeOffset 时有效。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+| SampleSnapshotTask | [MediaProcessTaskSampleSnapshotResultForDY](#MediaProcessTaskSampleSnapshotResultForDY) | 对视频采样截图任务的查询结果，当任务类型为 SampleSnapshot 时有效。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+| ImageSpriteTask | [MediaProcessTaskImageSpriteResultForDY](#MediaProcessTaskImageSpriteResultForDY) | 对视频截雪碧图任务的查询结果，当任务类型为 ImageSprite 时有效。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+| AdaptiveDynamicStreamingTask | [MediaProcessTaskAdaptiveDynamicStreamingResultForDY](#MediaProcessTaskAdaptiveDynamicStreamingResultForDY) | 转自适应码流任务查询结果，当任务类型为 AdaptiveDynamicStreaming 时有效。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+
+## MediaProcessTaskSampleSnapshotResultForDY
+
+对视频做采样截图任务结果类型
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Status | String | 任务状态，有 PROCESSING，SUCCESS 和 FAIL 三种。<br/>示例值：SUCCESS |
+| ErrCodeExt | String | 错误码，空字符串表示成功，其他值表示失败，取值请参考 [视频处理类错误码](https://cloud.tencent.com/document/product/266/50368) 列表。<br/>示例值："" |
+| ErrCode | Integer | 错误码，0 表示成功，其他值表示失败（该字段已不推荐使用，建议使用新的错误码字段 ErrCodeExt）。<br/>示例值：0 |
+| Message | String | 错误信息。<br/>示例值："" |
+| Input | [SampleSnapshotTaskInputForDY](#SampleSnapshotTaskInputForDY) | 对视频做采样截图任务输入。 |
+| Output | [MediaSampleSnapshotItemForDY](#MediaSampleSnapshotItemForDY) | 对视频做采样截图任务输出。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+
+## MediaProcessTaskSnapshotByTimeOffsetResultForDY
+
+对视频按指定时间点截图任务结果类型
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Status | String | 任务状态，有 PROCESSING，SUCCESS 和 FAIL 三种。<br/>示例值：SUCCESS |
+| ErrCodeExt | String | 错误码，空字符串表示成功，其他值表示失败，取值请参考 [视频处理类错误码](https://cloud.tencent.com/document/product/266/50368) 列表。<br/>示例值："" |
+| ErrCode | Integer | 错误码，0 表示成功，其他值表示失败（该字段已不推荐使用，建议使用新的错误码字段 ErrCodeExt）。<br/>示例值：0 |
+| Message | String | 错误信息。<br/>示例值："" |
+| Input | [SnapshotByTimeOffsetTaskInputForDY](#SnapshotByTimeOffsetTaskInputForDY) | 对视频按指定时间点截图任务输入。 |
+| Output | [MediaSnapshotByTimeOffsetItemForDY](#MediaSnapshotByTimeOffsetItemForDY) | 对视频按指定时间点截图任务输出。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+
+## MediaProcessTaskTranscodeResultForDY
+
+转码任务结果类型
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Status | String | 任务状态，有 PROCESSING，SUCCESS 和 FAIL 三种。<br/>示例值：PROCESSING |
+| ErrCodeExt | String | 错误码，空字符串表示成功，其他值表示失败，取值请参考 [视频处理类错误码](https://cloud.tencent.com/document/product/266/50368) 列表。<br/>示例值："" |
+| ErrCode | Integer | 错误码，0 表示成功，其他值表示失败（该字段已不推荐使用，建议使用新的错误码字段 ErrCodeExt）。<br/>示例值：0 |
+| Message | String | 错误信息。<br/>示例值："xx" |
+| Input | [TranscodeTaskInputForDY](#TranscodeTaskInputForDY) | 转码任务的输入。<br/>示例值：NULL |
+| Output | [MediaTranscodeItemForDY](#MediaTranscodeItemForDY) | 转码任务的输出。<br/>注意：此字段可能返回 null，表示取不到有效值。<br/>示例值：NULL |
+
+## MediaSampleSnapshotItemForDY
+
+采样截图信息
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Definition | Integer | 采样截图规格 ID，参见[采样截图参数模板](https://cloud.tencent.com/document/product/266/33480#.E9.87.87.E6.A0.B7.E6.88.AA.E5.9B.BE.E6.A8.A1.E6.9D.BF)。<br/>示例值：10 |
+| SampleType | String | 采样方式，取值范围：<br/><li>Percent：根据百分比间隔采样。</li><li>Time：根据时间间隔采样。</li><br/>示例值：Percent |
+| Interval | Integer | 采样间隔<br/><li>当 SampleType 为 Percent 时，该值表示多少百分比一张图。</li><li>当 SampleType 为 Time 时，该值表示多少时间间隔一张图，单位秒， 第一张图均为视频首帧。</li><br/>示例值：10 |
+| Storage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 截图后文件的存储位置。 |
+| ImagePathSet | Array of String | 生成的截图 path 列表。<br/>示例值：/xxx/xxx.jpg |
+| WaterMarkDefinition | Array of Integer | 截图如果被打上了水印，被打水印的模板 ID 列表。<br/>示例值：[691030] |
+
+## MediaSnapshotByTimeOffsetItemForDY
+
+媒体文件指定时间点截图信息
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Definition | Integer | 指定时间点截图规格，参见[指定时间点截图参数模板](https://cloud.tencent.com/document/product/266/33480#.E6.97.B6.E9.97.B4.E7.82.B9.E6.88.AA.E5.9B.BE.E6.A8.A1.E6.9D.BF)。<br/>示例值：10 |
+| PicInfoSet | Array of [MediaSnapshotByTimePicInfoItemForDY](#MediaSnapshotByTimePicInfoItemForDY) | 同一规格的截图信息集合，每个元素代表一张截图。 |
+| Storage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 指定时间点截图文件的存储位置。 |
+
+## MediaSnapshotByTimePicInfoItemForDY
+
+指定时间点截图信息
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| TimeOffset | Float | 该张截图对应视频文件中的时间偏移，单位为<font color=red>毫秒</font>。<br/>示例值：0 |
+| Path | String | 该张截图的路径。<br/>示例值：xxx/xxx.jpg |
+| WaterMarkDefinition | Array of Integer | 截图如果被打上了水印，被打水印的模板 ID 列表。<br/>示例值：691030 |
+
+## MediaTranscodeItemForDY
+
+转码信息
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| OutputStorage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 转码后文件的目标存储。 |
+| Path | String | 转码后的视频文件路径。<br/>示例值：/xxx/xxx.mp4 |
+| Definition | Integer | 转码规格 ID，参见[转码参数模板](https://cloud.tencent.com/document/product/266/33478#.5B.5D(id.3Azm).E8.BD.AC.E7.A0.81.E6.A8.A1.E6.9D.BF)。<br/>示例值：10 |
+| Bitrate | Integer | 视频流码率平均值与音频流码率平均值之和， 单位：bps。<br/>示例值：3000000 |
+| Height | Integer | 视频流高度的最大值，单位：px。<br/>示例值：1080 |
+| Width | Integer | 视频流宽度的最大值，单位：px。<br/>示例值：1920 |
+| Size | Integer | 媒体文件总大小（视频为 HLS 时，大小是 m3u8 和 ts 文件大小的总和），单位：字节。<br/>示例值：10240 |
+| Duration | Float | 视频时长，单位：秒。<br/>示例值：60 |
+| Container | String | 容器类型，例如 m4a，mp4 等。<br/>示例值：mp4 |
+| Md5 | String | 视频的 md5 值。<br/>示例值：b53dbbaca786281e0e84777a99d9ea07 |
+| AudioStreamSet | Array of [MediaAudioStreamItemForDY](#MediaAudioStreamItemForDY) | 音频流信息。 |
+| VideoStreamSet | Array of [MediaVideoStreamItemForDY](#MediaVideoStreamItemForDY) | 视频流信息。 |
+
+## MediaVideoStreamItemForDY
+
+视频流信息
+
+被如下接口引用：DescribeMediaMetaDataForDY, DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| Bitrate | Integer | 视频流的码率，单位：bps。<br/>示例值：100000 |
+| Height | Integer | 视频流的高度，单位：px。<br/>示例值：1920 |
+| Width | Integer | 视频流的宽度，单位：px。<br/>示例值：1080 |
+| Codec | String | 视频流的编码格式，例如 h264。<br/>示例值：h264 |
+| Fps | Integer | 帧率，单位：hz。<br/>示例值：30 |
+
 ## NumberFormatForDY
 
 输出文件名的`{number}`变量的规则。
@@ -120,10 +418,10 @@
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| InitialValue | Integer | 否 | `{number}`变量的起始值，默认为0。 |
-| Increment | Integer | 否 | `{number}`变量的增长步长，默认为1。 |
-| MinLength | Integer | 否 | `{number}`变量的最小长度，不足时补占位符。默认为1。 |
-| PlaceHolder | String | 否 | `{number}`变量的长度不足时，补充的占位符。默认为"0"。 |
+| InitialValue | Integer | 否 | `{number}`变量的起始值，默认为0。<br/>示例值：0 |
+| Increment | Integer | 否 | `{number}`变量的增长步长，默认为1。<br/>示例值：1 |
+| MinLength | Integer | 否 | `{number}`变量的最小长度，不足时补占位符。默认为1。<br/>示例值：5 |
+| PlaceHolder | String | 否 | `{number}`变量的长度不足时，补充的占位符。默认为"0"。<br/>示例值：0 |
 
 ## RawImageWatermarkInputForDY
 
@@ -133,10 +431,10 @@
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| ImageContent | [MediaInputInfoForDY](#MediaInputInfoForDY) | 是 | 水印图片的输入内容。支持 jpeg、png 图片格式。 |
-| Width | String | 否 | 水印的宽度。支持 %、px 两种格式：<br/><li>当字符串以 % 结尾，表示水印 Width 为视频宽度的百分比大小，如 10% 表示 Width 为视频宽度的 10%；</li><li>当字符串以 px 结尾，表示水印 Width 单位为像素，如 100px 表示 Width 为 100 像素。</li><br/>默认值：10%。 |
-| Height | String | 否 | 水印的高度。支持 %、px 两种格式：<br/><li>当字符串以 % 结尾，表示水印 Height 为视频高度的百分比大小，如 10% 表示 Height 为视频高度的 10%；</li><li>当字符串以 px 结尾，表示水印 Height 单位为像素，如 100px 表示 Height 为 100 像素。</li><br/>默认值：0px，表示 Height 按照原始水印图片的宽高比缩放。 |
-| RepeatType | String | 否 | 印重复类型。使用场景：水印为动态图像。取值范围：<br/><li>once：动态水印播放完后，不再出现；</li><li>repeat_last_frame：水印播放完后，停留在最后一帧；</li><li>repeat：水印循环播放，直到视频结束（默认值）。</li> |
+| ImageContent | [MediaInputInfoForDY](#MediaInputInfoForDY) | 是 | 水印图片的输入内容。支持 jpeg、png 图片格式。<br/>示例值：{} |
+| Width | String | 否 | 水印的宽度。支持 %、px 两种格式：<br/><li>当字符串以 % 结尾，表示水印 Width 为视频宽度的百分比大小，如 10% 表示 Width 为视频宽度的 10%；</li><li>当字符串以 px 结尾，表示水印 Width 单位为像素，如 100px 表示 Width 为 100 像素。</li><br/>默认值：10%。<br/>示例值：10% |
+| Height | String | 否 | 水印的高度。支持 %、px 两种格式：<br/><li>当字符串以 % 结尾，表示水印 Height 为视频高度的百分比大小，如 10% 表示 Height 为视频高度的 10%；</li><li>当字符串以 px 结尾，表示水印 Height 单位为像素，如 100px 表示 Height 为 100 像素。</li><br/>默认值：0px，表示 Height 按照原始水印图片的宽高比缩放。<br/>示例值：10% |
+| RepeatType | String | 否 | 印重复类型。使用场景：水印为动态图像。取值范围：<br/><li>once：动态水印播放完后，不再出现；</li><li>repeat_last_frame：水印播放完后，停留在最后一帧；</li><li>repeat：水印循环播放，直到视频结束（默认值）。</li><br/>示例值：repeat |
 
 ## RawWatermarkParameterForDY
 
@@ -146,69 +444,69 @@
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| Type | String | 是 | 水印类型，可选值：<br/><li>image：图片水印。</li> |
-| CoordinateOrigin | String | 否 | 原点位置，目前仅支持：<br/><li>TopLeft：表示坐标原点位于视频图像左上角，水印原点为图片或文字的左上角。</li><br/>默认值：TopLeft。 |
-| XPos | String | 否 | 水印原点距离视频图像坐标原点的水平位置。支持 %、px 两种格式：<br/><li>当字符串以 % 结尾，表示水印 XPos 为视频宽度指定百分比，如 10% 表示 XPos 为视频宽度的 10%；</li><li>当字符串以 px 结尾，表示水印 XPos 为指定像素，如 100px 表示 XPos 为 100 像素。</li><br/>默认值：0px。 |
-| YPos | String | 否 | 水印原点距离视频图像坐标原点的垂直位置。支持 %、px 两种格式：<br/><li>当字符串以 % 结尾，表示水印 YPos 为视频高度指定百分比，如 10% 表示 YPos 为视频高度的 10%；</li><li>当字符串以 px 结尾，表示水印 YPos 为指定像素，如 100px 表示 YPos 为 100 像素。</li><br/>默认值：0px。 |
+| Type | String | 是 | 水印类型，可选值：<br/><li>image：图片水印。</li><br/>示例值：image |
+| CoordinateOrigin | String | 否 | 原点位置，目前仅支持：<br/><li>TopLeft：表示坐标原点位于视频图像左上角，水印原点为图片或文字的左上角。</li><br/>默认值：TopLeft。<br/>示例值：TopLeft |
+| XPos | String | 否 | 水印原点距离视频图像坐标原点的水平位置。支持 %、px 两种格式：<br/><li>当字符串以 % 结尾，表示水印 XPos 为视频宽度指定百分比，如 10% 表示 XPos 为视频宽度的 10%；</li><li>当字符串以 px 结尾，表示水印 XPos 为指定像素，如 100px 表示 XPos 为 100 像素。</li><br/>默认值：0px。<br/>示例值：10% |
+| YPos | String | 否 | 水印原点距离视频图像坐标原点的垂直位置。支持 %、px 两种格式：<br/><li>当字符串以 % 结尾，表示水印 YPos 为视频高度指定百分比，如 10% 表示 YPos 为视频高度的 10%；</li><li>当字符串以 px 结尾，表示水印 YPos 为指定像素，如 100px 表示 YPos 为 100 像素。</li><br/>默认值：0px。<br/>示例值：10% |
 | ImageTemplate | [RawImageWatermarkInputForDY](#RawImageWatermarkInputForDY) | 否 | 图片水印模板，当 Type 为 image，该字段必填。当 Type 为 text，该字段无效。 |
 
 ## SampleSnapshotTaskInputForDY
 
 对视频做采样截图任务输入参数类型。
 
-被如下接口引用：ProcessMediaForDY。
+被如下接口引用：DescribeTaskDetailForDY, ProcessMediaForDY。
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| Definition | Integer | 是 | 采样截图模板 ID。 |
+| Definition | Integer | 是 | 采样截图模板 ID。<br/>示例值：10 |
 | WatermarkSet | Array of [WatermarkInputForDY](#WatermarkInputForDY) | 否 | 水印列表，支持多张图片或文字水印，最大可支持 10 张。 |
 | OutputStorage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 否 | 采样截图后文件的目标存储，不填则继承上层的 OutputStorage 值。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
-| OutputObjectPath | String | 否 | 采样截图后图片文件的输出路径，可以为相对路径或者绝对路径。如果不填，则默认为相对路径：`{inputName}_sampleSnapshot_{definition}_{number}.{format}`。 |
+| OutputObjectPath | String | 否 | 采样截图后图片文件的输出路径，可以为相对路径或者绝对路径。如果不填，则默认为相对路径：`{inputName}_sampleSnapshot_{definition}_{number}.{format}`。<br/>示例值：a.jpg |
 | ObjectNumberFormat | [NumberFormatForDY](#NumberFormatForDY) | 否 | 采样截图后输出路径中的`{number}`变量的规则。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
 
 ## SnapshotByTimeOffsetTaskInputForDY
 
 对视频按指定时间点截图任务输入参数类型
 
-被如下接口引用：ProcessMediaForDY。
+被如下接口引用：DescribeTaskDetailForDY, ProcessMediaForDY。
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| Definition | Integer | 是 | 指定时间点截图模板 ID。 |
-| ExtTimeOffsetSet | Array of String | 否 | 截图时间点列表，时间点支持 s、% 两种格式：<br/><li>当字符串以 s 结尾，表示时间点单位为秒，如 3.5s 表示时间点为第3.5秒；</li><li>当字符串以 % 结尾，表示时间点为视频时长的百分比大小，如10%表示时间点为视频前第10%的时间。</li> |
-| TimeOffsetSet | Array of Float | 否 | 截图时间点列表，单位为<font color=red>秒</font>。此参数已不再建议使用，建议您使用 ExtTimeOffsetSet 参数。 |
+| Definition | Integer | 是 | 指定时间点截图模板 ID。<br/>示例值：10 |
+| ExtTimeOffsetSet | Array of String | 否 | 截图时间点列表，时间点支持 s、% 两种格式：<br/><li>当字符串以 s 结尾，表示时间点单位为秒，如 3.5s 表示时间点为第3.5秒；</li><li>当字符串以 % 结尾，表示时间点为视频时长的百分比大小，如10%表示时间点为视频前第10%的时间。</li><br/>示例值：3.5s |
+| TimeOffsetSet | Array of Float | 否 | 截图时间点列表，单位为<font color=red>秒</font>。此参数已不再建议使用，建议您使用 ExtTimeOffsetSet 参数。<br/>示例值：[3.5] |
 | WatermarkSet | Array of [WatermarkInputForDY](#WatermarkInputForDY) | 否 | 水印列表，支持多张图片或文字水印，最大可支持 10 张。 |
 | OutputStorage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 否 | 时间点截图后文件的目标存储，不填则继承上层的 OutputStorage 值。<li>当字符串以 s 结尾，表示时间点单位为秒，如 3.5s 表示时间点为第3.5秒；</li><li>当字符串以 % 结尾，表示时间点为视频时长的百分比大小，如10%表示时间点为视频前第10%的时间。</li><br/>注意：此字段可能返回 null，表示取不到有效值。 |
-| OutputObjectPath | String | 否 | 时间点截图后图片文件的输出路径，可以为相对路径或者绝对路径。如果不填，则默认为相对路径：`{inputName}_snapshotByTimeOffset_{definition}_{number}.{format}`。 |
+| OutputObjectPath | String | 否 | 时间点截图后图片文件的输出路径，可以为相对路径或者绝对路径。如果不填，则默认为相对路径：`{inputName}_snapshotByTimeOffset_{definition}_{number}.{format}`。<br/>示例值：outputObjectPath |
 | ObjectNumberFormat | [NumberFormatForDY](#NumberFormatForDY) | 否 | 时间点截图后输出路径中的`{number}`变量的规则。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
 
 ## TaskOutputStorageForDY
 
 视频处理输出对象信息。
 
-被如下接口引用：EditMediaForDY, ProcessMediaForDY。
+被如下接口引用：DescribeTaskDetailForDY, EditMediaForDY, ProcessMediaForDY。
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| Type | String | 是 | 视频处理输出对象存储位置的类型，现在仅支持 COS。 |
+| Type | String | 是 | 视频处理输出对象存储位置的类型，现在仅支持 COS。<br/>示例值：COS |
 | CosOutputStorage | [CosOutputStorageForDY](#CosOutputStorageForDY) | 否 | 当 Type 为 COS 时有效，则该项为必填，表示视频处理 COS 输出位置。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
 
 ## TranscodeTaskInputForDY
 
 转码任务输入参数类型
 
-被如下接口引用：ProcessMediaForDY。
+被如下接口引用：DescribeTaskDetailForDY, ProcessMediaForDY。
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| Definition | Integer | 是 | 视频转码模板 ID。 |
-| WatermarkSet | Array of [WatermarkInputForDY](#WatermarkInputForDY) | 否 | 水印列表，支持多张图片或文字水印，最大可支持 10 张。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
-| StartTimeOffset | Float | 否 | 转码后的视频的起始时间偏移，单位：秒。<br/><li>不填或填0，表示转码后的视频从原始视频的起始位置开始；</li><li>当数值大于0时（假设为 n），表示转码后的视频从原始视频的第 n 秒位置开始；</li><li>当数值小于0时（假设为 -n），表示转码后的视频从原始视频结束 n 秒前的位置开始。</li> |
-| EndTimeOffset | Float | 否 | 转码后视频的终止时间偏移，单位：秒。<br/><li>不填或填0，表示转码后的视频持续到原始视频的末尾终止；</li><li>当数值大于0时（假设为 n），表示转码后的视频持续到原始视频第 n 秒时终止；</li><li>当数值小于0时（假设为 -n），表示转码后的视频持续到原始视频结束 n 秒前终止。</li> |
-| OutputStorage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 否 | 转码后文件的目标存储，不填则继承上层的 OutputStorage 值。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
-| OutputObjectPath | String | 否 | 转码后主文件的输出路径，可以为相对路径或者绝对路径。如果不填，则默认为相对路径：`{inputName}_transcode_{definition}.{format}`。 |
-| SegmentObjectName | String | 否 | 码后分片文件的输出路径（转码 HLS 时 ts 的路径），只能为相对路径。如果不填，则默认为：`{inputName}_transcode_{definition}_{number}.{format}`。 |
-| ObjectNumberFormat | [NumberFormatForDY](#NumberFormatForDY) | 否 | 转码后输出路径中的`{number}`变量的规则。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+| Definition | Integer | 是 | 视频转码模板 ID。<br/>示例值：20 |
+| WatermarkSet | Array of [WatermarkInputForDY](#WatermarkInputForDY) | 否 | 水印列表，支持多张图片或文字水印，最大可支持 10 张。<br/>注意：此字段可能返回 null，表示取不到有效值。<br/>示例值：null |
+| StartTimeOffset | Float | 否 | 转码后的视频的起始时间偏移，单位：秒。<br/><li>不填或填0，表示转码后的视频从原始视频的起始位置开始；</li><li>当数值大于0时（假设为 n），表示转码后的视频从原始视频的第 n 秒位置开始；</li><li>当数值小于0时（假设为 -n），表示转码后的视频从原始视频结束 n 秒前的位置开始。</li><br/>示例值：null |
+| EndTimeOffset | Float | 否 | 转码后视频的终止时间偏移，单位：秒。<br/><li>不填或填0，表示转码后的视频持续到原始视频的末尾终止；</li><li>当数值大于0时（假设为 n），表示转码后的视频持续到原始视频第 n 秒时终止；</li><li>当数值小于0时（假设为 -n），表示转码后的视频持续到原始视频结束 n 秒前终止。</li><br/>示例值：null |
+| OutputStorage | [TaskOutputStorageForDY](#TaskOutputStorageForDY) | 否 | 转码后文件的目标存储，不填则继承上层的 OutputStorage 值。<br/>注意：此字段可能返回 null，表示取不到有效值。<br/>示例值：null |
+| OutputObjectPath | String | 否 | 转码后主文件的输出路径，可以为相对路径或者绝对路径。如果不填，则默认为相对路径：`{inputName}_transcode_{definition}.{format}`。<br/>示例值：null |
+| SegmentObjectName | String | 否 | 码后分片文件的输出路径（转码 HLS 时 ts 的路径），只能为相对路径。如果不填，则默认为：`{inputName}_transcode_{definition}_{number}.{format}`。<br/>示例值：null |
+| ObjectNumberFormat | [NumberFormatForDY](#NumberFormatForDY) | 否 | 转码后输出路径中的`{number}`变量的规则。<br/>注意：此字段可能返回 null，表示取不到有效值。<br/>示例值：null |
 
 ## WatermarkInputForDY
 
@@ -218,10 +516,26 @@
 
 | 名称 | 类型 | 必选 | 描述 |
 |------|------|----------|------|
-| Definition | Integer | 是 | 水印模板 ID。 |
+| Definition | Integer | 是 | 水印模板 ID。<br/>示例值：0 |
 | RawParameter | [RawWatermarkParameterForDY](#RawWatermarkParameterForDY) | 否 | 水印自定义参数，当 Definition 填 0 时有效。<br/>该参数用于高度定制场景，建议您优先使用 Definition 指定水印参数。<br/>水印自定义参数不支持截图打水印。 |
-| TextContent | String | 否 | 文字内容，长度不超过100个字符。仅当水印类型为文字水印时填写。<br/>文字水印不支持截图打水印。 |
-| SvgContent | String | 否 | SVG 内容。长度不超过 2000000 个字符。仅当水印类型为 SVG 水印时填写。<br/>SVG 水印不支持截图打水印。 |
-| StartTimeOffset | Float | 否 | 水印的起始时间偏移，单位：秒。不填或填0，表示水印从画面出现时开始显现。<br/><li>不填或填0，表示水印从画面开始就出现；</li><li>当数值大于0时（假设为 n），表示水印从画面开始的第 n 秒出现；</li><li>当数值小于0时（假设为 -n），表示水印从离画面结束 n 秒前开始出现。</li> |
-| EndTimeOffset | Float | 否 | 水印的结束时间偏移，单位：秒。<br/><li>不填或填0，表示水印持续到画面结束；</li><li>当数值大于0时（假设为 n），表示水印持续到第 n 秒时消失；</li><li>当数值小于0时（假设为 -n），表示水印持续到离画面结束 n 秒前消失。</li> |
+| TextContent | String | 否 | 文字内容，长度不超过100个字符。仅当水印类型为文字水印时填写。<br/>文字水印不支持截图打水印。<br/>示例值：MyContent |
+| SvgContent | String | 否 | SVG 内容。长度不超过 2000000 个字符。仅当水印类型为 SVG 水印时填写。<br/>SVG 水印不支持截图打水印。<br/>示例值：SvgContent |
+| StartTimeOffset | Float | 否 | 水印的起始时间偏移，单位：秒。不填或填0，表示水印从画面出现时开始显现。<br/><li>不填或填0，表示水印从画面开始就出现；</li><li>当数值大于0时（假设为 n），表示水印从画面开始的第 n 秒出现；</li><li>当数值小于0时（假设为 -n），表示水印从离画面结束 n 秒前开始出现。</li><br/>示例值：0 |
+| EndTimeOffset | Float | 否 | 水印的结束时间偏移，单位：秒。<br/><li>不填或填0，表示水印持续到画面结束；</li><li>当数值大于0时（假设为 n），表示水印持续到第 n 秒时消失；</li><li>当数值小于0时（假设为 -n），表示水印持续到离画面结束 n 秒前消失。</li><br/>示例值：0 |
+
+## WorkflowTaskForDY
+
+视频处理任务信息
+
+被如下接口引用：DescribeTaskDetailForDY。
+
+| 名称 | 类型 |  描述 |
+|------|------|-------|
+| TaskId | String | 视频处理任务 ID。<br/>示例值：125xxx65-procedurev2-bffb15f07530b57bc1aabb01fac74bca |
+| Status | String | 任务流状态，取值：<br/><li>PROCESSING：处理中；</li><li>FINISH：已完成。</li><br/>示例值：PROCESSING |
+| ErrCode | Integer | 已弃用，请使用各个具体任务的 ErrCode。<br/>示例值：0 |
+| Message | String | 已弃用，请使用各个具体任务的 Message。<br/>示例值：Success |
+| InputInfo | [MediaInputInfoForDY](#MediaInputInfoForDY) | 视频处理的目标文件信息。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+| MetaData | [MediaMetaDataForDY](#MediaMetaDataForDY) | 原始视频的元信息。<br/>注意：此字段可能返回 null，表示取不到有效值。 |
+| MediaProcessResultSet | Array of [MediaProcessTaskResultForDY](#MediaProcessTaskResultForDY) | 视频处理任务的执行状态与结果。 |
 
